publish: minor fixes
generated from commit 827c57f55784cc24092f5154e105e3f4284bea9e

--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@ When querying by <code>shelterluv_prefix</code>, the result will always be an ar
 </span></code></pre></div>
 <p>This endpoint retrieves all products.</p>
 <h3 id='http-request'>HTTP Request</h3>
-<p><code>GET https://nexus-staging.invisiblecommerce.com/api/v1/products</code></p>
+<p><code>GET /api/v1/products</code></p>
 <h3 id='query-parameters'>Query Parameters</h3>
 <table><thead>
 <tr>
@@ -764,7 +764,7 @@ When querying by <code>shelterluv_prefix</code>, the result will always be an ar
 </span></code></pre></div>
 <p>This endpoint retrieves a specific product.</p>
 <h3 id='http-request-2'>HTTP Request</h3>
-<p><code>GET https://nexus-staging.invisiblecommerce.com/api/v1/products/&lt;ID&gt;</code></p>
+<p><code>GET /api/v1/products/&lt;ID&gt;</code></p>
 <h3 id='url-parameters'>URL Parameters</h3>
 <table><thead>
 <tr>
