publish: minor fixes
generated from commit 827c57f55784cc24092f5154e105e3f4284bea9e

--- a/index.html
+++ b/index.html
@@ -1059,7 +1059,7 @@ When querying by <code>shelterluv_prefix</code>, the result will always be an ar
 <h1 id='swagger-ui'>Swagger UI</h1>
 <p>Swagger UI is available for further details about the endpoints and models. You can also use it to try the API without having to write any code. You can access our Swagger UI at:</p>
 
-<p><a href="https://nexus-staging.invisiblecommerce.com/api/v1/docs">https://nexus-staging.invisiblecommerce.com/api/v1/docs</a></p>
+<p><a href="https://nexus-staging.invisiblecommerce.com/api/swagger">https://nexus-staging.invisiblecommerce.com/api/swagger</a></p>
 
 <p>Remember to use the Authorize button with your issued API key. </p>
 
