publish: minor fixes
generated from commit 827c57f55784cc24092f5154e105e3f4284bea9e

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ You must replace <code>1234567890987654321</code> with the API key supplied to y
 <li>Production: <code>https://nexus.invisiblecommerce.com/api/v1/</code></li>
 </ul>
 
-<p>Please perform all testing and development work against the Staging environment. We can data in this environments as needed for your test cases. Please note that since this environment is not optimized for production usage, relatively slow response times are normal. </p>
+<p>Please perform all testing and development work against the Staging environment. We can manipulate data in this environments as needed for your test cases. Please note that since this environment is not optimized for production usage, relatively slow response times are normal. </p>
 
 <p>When you have finished development, please request from our engineering team an API key for use with the Production environment. </p>
 <h1 id='pagination'>Pagination</h1><h3 id='query-parameters'>Query Parameters</h3>
