publish: minor fixes
generated from commit 827c57f55784cc24092f5154e105e3f4284bea9e

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             <a href="#introduction" class="toc-h1 toc-link" data-title="Introduction">Introduction</a>
           </li>
           <li>
-            <a href="#authentication" class="toc-h1 toc-link" data-title="Authentication">Authentication</a>
+            <a href="#authorization" class="toc-h1 toc-link" data-title="Authorization">Authorization</a>
           </li>
           <li>
             <a href="#content-type" class="toc-h1 toc-link" data-title="Content Type">Content Type</a>
@@ -385,7 +385,7 @@
       <div class="content">
         <h1 id='introduction'>Introduction</h1>
 <p>The Invisible Commerce API provides access to Invisible Commerce functions, including those of its subsidiary Ethical Paws. </p>
-<h1 id='authentication'>Authentication</h1>
+<h1 id='authorization'>Authorization</h1>
 <blockquote>
 <p>To authorize, use this code:</p>
 </blockquote>
@@ -403,7 +403,7 @@ curl <span class="s2">"api_endpoint_here"</span> <span class="se">\</span>
 
 <p><code>Authorization: 1234567890987654321</code></p>
 
-<p>Please notify us immediately if your token is compromised. We are also able to provide an additional token to aid in token rotation. 
+<p>Please notify us immediately if your key is compromised. We are also able to provide an additional key to aid in key rotation. 
 <aside class="notice">
 You must replace <code>1234567890987654321</code> with the API key supplied to you by our engineering team. 
 </aside></p>
