publish: minor fixes
generated from commit 827c57f55784cc24092f5154e105e3f4284bea9e

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ You must replace <code>1234567890987654321</code> with the API key supplied to y
 <table><thead>
 <tr>
 <th>Name</th>
-<th>Located in</th>
+<th>Location</th>
 <th>Description</th>
 <th>Required</th>
 <th>Type</th>
