publish: minor fixes
generated from commit 827c57f55784cc24092f5154e105e3f4284bea9e

--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@ When querying by <code>shelterluv_prefix</code>, the result will always be an ar
 <tr>
 <td>id</td>
 <td>path</td>
-<td></td>
+<td>ID of the requested product</td>
 <td>Yes</td>
 <td>integer</td>
 </tr>
