--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@ When querying by <code>shelterluv_prefix</code>, the result will always be an ar
 </span></code></pre></div>
 <p>This endpoint retrieves a specific storefront.</p>
 <h3 id='http-request-2'>HTTP Request</h3>
-<p><code>GET /api/v1/storefronts/&lt;ID&gt;</code></p>
+<p><code>GET /api/v1/storefronts/:id</code></p>
 <h3 id='url-parameters'>URL Parameters</h3>
 <table><thead>
 <tr>
@@ -732,7 +732,7 @@ When querying by <code>shelterluv_prefix</code>, the result will always be an ar
 </span></code></pre></div>
 <p>This endpoint retrieves a specific product.</p>
 <h3 id='http-request-2'>HTTP Request</h3>
-<p><code>GET /api/v1/products/&lt;ID&gt;</code></p>
+<p><code>GET /api/v1/products/:id</code></p>
 <h3 id='url-parameters'>URL Parameters</h3>
 <table><thead>
 <tr>
